CSS: Fix find your district button width on mobile

--- a/static/scss/buttons.scss
+++ b/static/scss/buttons.scss
@@ -80,7 +80,6 @@ a.btn {
 
 .btn-primary.find-district-button {
   background: #2e98cc;
-  width: 200px;
   border-radius: 6px;
   margin-bottom: 10px;
   margin-top: 10px;
